WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144633
Only autoplay videos should not automatically play to playback target
https://bugs.webkit.org/show_bug.cgi?id=144633
Summary
Only autoplay videos should not automatically play to playback target
Eric Carlson
Reported
2015-05-05 12:28:01 PDT
Refine the selection criteria added in
r183613
to allow any video that starts playing from a user gesture to play to target.
Attachments
Proposed patch
(2.78 KB, text/plain)
2015-05-05 12:36 PDT
,
Eric Carlson
no flags
Details
Updated patch
(3.70 KB, patch)
2015-05-05 13:30 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2015-05-05 12:28:59 PDT
<
rdar://problem/20822993
>
Eric Carlson
Comment 2
2015-05-05 12:36:51 PDT
Created
attachment 252397
[details]
Proposed patch
Eric Carlson
Comment 3
2015-05-05 13:30:21 PDT
Created
attachment 252400
[details]
Updated patch
WebKit Commit Bot
Comment 4
2015-05-05 13:32:35 PDT
Attachment 252400
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Carlson
Comment 5
2015-05-05 13:53:03 PDT
Committed
r183826
:
https://trac.webkit.org/r183826
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug